<resources>
    <string name="app_name">TabletopSidekick</string>

    <string name="nav_dice_roller">Dice Roller</string>
    <string name="nav_random_number">Random Number Generator</string>
    <string name="nav_turn_order">Turn Order Determinator</string>
    <string name="nav_turn_timer">Turn Timer</string>
    <string name="nav_calculator">Calculator</string>

    <!-- Dice Roller -->
    <string name="edit_dice">Edit Dice</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="num_dice">Number of Dice</string>
    <string name="type_dice">Type of Dice</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_OK">OK</string>

    <string-array name="all_dice">
        <item>d4</item>
        <item>d6</item>
        <item>d8</item>
        <item>d10</item>
        <item>d12</item>
        <item>d20</item>
        <item>d100</item>
    </string-array>
</resources>
